<resources>
    <string name="app_name">MyPraking</string>
    <string name="slot_one">Slotone</string>
    <string name="slot_two">Slottwo</string>
    <string name="slot_three">Slotthree</string>
    <string name="placenumber">Placenumber</string>
    <string name="brand">Brand</string>
    <string name="user">User</string>
    <string name="update">Update</string>
    <string name="placenumber1">PlaceNumber1</string>
    <string name="slotone">SlotOne</string>
    <string name="slottwo">SlotTwo</string>
    <string name="slotthree">Slotthree</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_text">Name_Text</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="textPassword">textPassword</string>
    <string name="Password">Password</string>
    <string name="submit_b" />
    <string name="submit">submit</string>
    <string name="cancel_btn">cancel_btn</string>
    <string name="cancel">cancel</string>
    <string name="Login">login</string>
    <string name="Logintxt">Login</string>
    <string name="usernametxt">Username</string>
    <string name="password">Password</string>
    <string name="submittxt">Submit</string>
    <string name="canceltxt">cancel</string>
    <string name="btn1">slotbtnone</string>
    <string name="btn2">slotbtntwo</string>
    <string name="btn3">slotbtnthree</string>
    <string name="edit1txt">editnumber</string>
    <string name="edit2txt">Brand</string>
    <string name="edit3txt">NameDriver</string>
    <string name="submit_btn">Submit</string>
    <string name="cancelbtn">Cancel</string>
</resources>
