<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/slot_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot_one"
            app:layout_constraintBaseline_toBaselineOf="@+id/slot_two" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/slot_two"/>
    <Button
            android:text="@string/slot_two"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/slot_two"
            app:layout_constraintStart_toEndOf="@+id/slot_one" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/slot_three" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="109dp"
    />
    <Button
            android:text="@string/slot_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot_three"
            app:layout_constraintBaseline_toBaselineOf="@+id/slot_two"
            app:layout_constraintStart_toEndOf="@+id/slot_two"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="145dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="178dp"
            android:layout_marginBottom="228dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/place_number"
            android:hint="@string/placenumber" app:layout_constraintTop_toBottomOf="@+id/slot_one"
            app:layout_constraintBottom_toTopOf="@+id/brand" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="31dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="31dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/place_number"
            app:layout_constraintBottom_toTopOf="@+id/user" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="31dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="31dp" android:id="@+id/brand" android:hint="@string/brand"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/brand"
            app:layout_constraintBottom_toTopOf="@+id/update" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="31dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="31dp" android:hint="@string/user"/>

</androidx.constraintlayout.widget.ConstraintLayout>