<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Loginmain"
        android:id="@+id/frameLayout">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="@string/textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="343dp" />

        <Button
                android:id="@+id/submit"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:hint="@string/submit"
                android:text="@string/submit"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/cancel"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:hint="@string/cancel"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/submit"
                app:layout_constraintTop_toBottomOf="@+id/pass" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>